02.6.2000	First problems fixed <garetxe@users.sourceforge.net>

	* configure.in: Added the option to disable X extensions (DGA)
	from the configure script (thanks to Jan Castermans).
	
01.6.2000	Bug fixes <garetxe@users.sourceforge.net>

	* everything: Lots of bugs and fixme's have been corrected. Some
	code cleanups have been made too.
	* configure.in: Changed release number from 0.5.0pre1 to 0.5.0. I
	plan to release tomorrow.

29.5.2000	Tveng2 done <garetxe@users.sourceforge.net>

	* tveng2.c:
	* tveng.c: The V4L2 driver has been [re]written and apparently it
	works fine. The bugs when opening external programs and changing
	inputs are still there, though :(
	* plugins.c: Converted plugin_get_priority into a more general
	pourpouse function, plugin_get_misc_info. Added cathegories too.

20.5.2000	Back into coding <garetxe@users.sourceforge.net>

	* /me: I'm very busy with my finals, i won't have much time for
	coding this month (and half of the next one) :(	
	* plugins.c:
	* plugin_common.h: New plugin structure, more flexible.
	* plugins/template/template.c:
	* plugins/screenshot/screenshot.c: Adapted to the new API.
	* tveng: Started rewritting the V4L2 controller.
	* zapping_setup_fb/zapping_setub_fb.c: Corrected verbosity and
	some typos.
	
30.4.2000	Screenshot saver <garetxe@users.sourceforge.net>

	* plugins/screenshot/screenshot.c: Finished.
	* configure.in: Added checking for -lpng

29.4.2000	Screenshot saver <garetxe@users.sourceforge.net>

	* plugins/template/template.c: Finished.
	* src/Makefile.am: Added pthread support.
	* src/zmisc.c:
	* src/zmisc.h: Added some blocking, modal variations of ShowBox.
	
28.4.2000	Plugins working <garetxe@users.sourceforge.net>

	* src/plugins.c: some bugs (misfeatures ;) corrected, it now works
	as expected.
	* help/C/plugin_devel.html: Changed plugin_ prefix to zp_ in the
	plugin API (there was a symbol collision).
	* plugins/template/template.c: Template plugin created.