@@ -8,3 +8,4 @@
 #undef PACKAGE_DATA_DIR
 #undef PACKAGE_SOURCE_DIR
 #undef DISABLE_X_EXTENSIONS
+#undef LIBXML_CHILDS
